--- a/Ranking-n-grams-based-on-Spanish-text-corpora.ipynb
+++ b/Ranking-n-grams-based-on-Spanish-text-corpora.ipynb
@@ -40,13 +40,14 @@
     "import pandas as pd\n",
     "\n",
     "import nltk\n",
+    "nltk.download('stopwords')\n",
     "from nltk.tokenize import sent_tokenize, word_tokenize \n",
     "from nltk.probability import FreqDist\n",
     "import gensim \n",
     "from gensim.models import Word2Vec \n",
     "import re\n",
     "import unicodedata\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
