--- a/Topic-Modeling-Chronicling-America-loc.ipynb
+++ b/Topic-Modeling-Chronicling-America-loc.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>url</th>\n",
+       "      <th>date_issued</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://chroniclingamerica.loc.gov/lccn/sn8702...</td>\n",
+       "      <td>1917-04-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>https://chroniclingamerica.loc.gov/lccn/sn8702...</td>\n",
+       "      <td>1917-04-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>https://chroniclingamerica.loc.gov/lccn/sn8702...</td>\n",
+       "      <td>1917-04-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>https://chroniclingamerica.loc.gov/lccn/sn8702...</td>\n",
+       "      <td>1917-05-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>https://chroniclingamerica.loc.gov/lccn/sn8702...</td>\n",
+       "      <td>1917-05-13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 url date_issued\n",
+       "0  https://chroniclingamerica.loc.gov/lccn/sn8702...  1917-04-15\n",
+       "1  https://chroniclingamerica.loc.gov/lccn/sn8702...  1917-04-22\n",
+       "2  https://chroniclingamerica.loc.gov/lccn/sn8702...  1917-04-29\n",
+       "3  https://chroniclingamerica.loc.gov/lccn/sn8702...  1917-05-06\n",
+       "4  https://chroniclingamerica.loc.gov/lccn/sn8702...  1917-05-13"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "url = 'https://chroniclingamerica.loc.gov/lccn/sn87021178.json'\n",
     "\n",
@@ -70,9 +139,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "url            38\n",
+       "date_issued    38\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.count()"
    ]
