--- a/Ranking-n-grams-based-on-Spanish-text-corpora.ipynb
+++ b/Ranking-n-grams-based-on-Spanish-text-corpora.ipynb
@@ -41,6 +41,7 @@
     "\n",
     "import nltk\n",
     "nltk.download('stopwords')\n",
+    "nltk.download('punkt')\n",
     "from nltk.tokenize import sent_tokenize, word_tokenize \n",
     "from nltk.probability import FreqDist\n",
     "import gensim \n",
