--- a/Ranking-n-grams-based-on-Spanish-text-corpora.ipynb
+++ b/Ranking-n-grams-based-on-Spanish-text-corpora.ipynb
@@ -48,7 +48,7 @@
     "from gensim.models import Word2Vec \n",
     "import re\n",
     "import unicodedata\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
