--- a/Topic-Modeling-based-on-Spanish-text-corpora.ipynb
+++ b/Topic-Modeling-based-on-Spanish-text-corpora.ipynb
@@ -52,7 +52,10 @@
     "from nltk.corpus import wordnet\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.stem.porter import PorterStemmer\n",
-    "import nltk"
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('punkt')"
    ]
   },
   {
@@ -238,8 +241,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk.corpus import stopwords\n",
-    "nltk.download('stopwords')\n",
     "stop_words = stopwords.words('spanish')\n",
     "stop_words.extend(['habia', 'quo', 'dió', 'algún','darién', 'dia', 'sing', 'babia', 'habian', 'despues', 'indic', 'ele', 'sólo', 'según', 'jos', 'jucef', 'pers', 'the', 'ra.', '.—núm', 'aben'])\n",
     "def remove_stop_words(text):\n",
